tests/integration/tests/basic_functionality/check_commands/CHECK/one_string/01-negative_match/sample.itest
; RUN: cat %S/filecheck.input | (%FILECHECK_EXEC %S/filecheck.check 2>&1 || true) | %FILECHECK_TESTER_EXEC %s
; CHECK: {{^.*}}FileCheck
; CHECK: {{.*}}filecheck.check:1:10: error: CHECK: expected string not found in input{{$}}
; CHECK: {{^}}; CHECK: foo{{$}}
; CHECK: {{^}}         ^{{$}}
; CHECK: {{^<stdin>:.*:.*: note: scanning from here$}}
; CHECK: {{^}}hello{{$}}
; CHECK: {{^}}^{{$}}
; CHECK: {{^<stdin>:.*:.*: note: possible intended match here$}}
; CHECK: {{^.*$}}
; CHECK: {{^.*$}}
; CHECK-EMPTY
